stderr
JudgeManTest.java:69: error: method Flush() is already defined in class JudgeManTest
    void Flush() {
         ^
1 error
